Add Token to API and Models

--- a/MyVet.Web/appsettings.json
+++ b/MyVet.Web/appsettings.json
@@ -7,6 +7,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MyVet;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Tokens": {
+    "Key": "asdfghjikbnvcgfLaIguanaFumafdgfg%fdgf^&GRGba9090Marimb___aCon!Sabo&*$%$@#$%^#$^rAl#lanta&dsrtf090091yhgcvgfxdgc",
+    "Issuer": "localhost",
+    "Audience": "users"
   }
-
 }
